# mcp-neo4j-memory

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml
src/mcp_neo4j_memory/: __init__.py  server.py
